syntax = "proto3";

package github.constantine27k.crnt_data_manager.api.state.status;

option go_package = "github.com/Constantine27K/crnt-data-manager/pkg/api/state/status;status";

message IssueStatus {
	oneof status {
		IssueStatusCommon common = 1;
		IssueStatusDevelopment development = 2;
		IssueStatusEpic epic = 3;
	}
}

message IssueStatusCommon {
	Common status = 1;
}

message IssueStatusDevelopment {
	Development status = 2;
}

message IssueStatusEpic {
	Epic status = 2;
}

enum Common {
	STATUS_COMMON_UNKNOWN = 0;
	STATUS_COMMON_BACKLOG = 1;
	STATUS_COMMON_IN_PROGRESS = 2;
	STATUS_COMMON_DONE = 3;
	STATUS_COMMON_READY_FOR_REVIEW = 4;
	STATUS_COMMON_IN_REVIEW = 5;
	STATUS_COMMON_REVIEW_FAILED = 6;
	STATUS_COMMON_REVIEW_PASSED = 7;
	STATUS_COMMON_GIVEN_TO_CUSTOMER = 8;
	STATUS_COMMON_CLOSED = 9;
	STATUS_COMMON_ON_HOLD = 10;
}

enum Development {
	STATUS_DEVELOPMENT_UNKNOWN = 0;
	STATUS_DEVELOPMENT_BACKLOG = 1;
	STATUS_DEVELOPMENT_IN_PROGRESS = 2;
	STATUS_DEVELOPMENT_IN_REVIEW = 3;
	STATUS_DEVELOPMENT_READY_FOR_TESTING = 4;
	STATUS_DEVELOPMENT_TESTING = 5;
	STATUS_DEVELOPMENT_TESTING_PASSED = 6;
	STATUS_DEVELOPMENT_DONE = 7;
	STATUS_DEVELOPMENT_READY_TO_DEPLOY = 8;
	STATUS_DEVELOPMENT_CLOSED = 9;
	STATUS_DEVELOPMENT_ON_HOLD = 10;
}

enum Epic {
	STATUS_EPIC_UNKNOWN = 0;
	STATUS_EPIC_BACKLOG = 1;
	STATUS_EPIC_PLANNING = 2;
	STATUS_EPIC_DESIGNING = 3;
	STATUS_EPIC_IT = 4;
	STATUS_EPIC_DONE = 5;
	STATUS_EPIC_CLOSED = 6;
	STATUS_EPIC_ON_HOLD = 7;
}

enum Sprint {
	STATUS_SPRINT_UNKNOWN = 0;
	STATUS_SPRINT_ACTIVE = 1;
	STATUS_SPRINT_FINISHED = 2;
}